[tool.poetry]
name = "langchain-study"
version = "0.1.0"
description = ""
authors = ["Paul Ku <justlove0714@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.5"
langchain = "^0.1.16"
langchain-community = "^0.0.34"
openai = "^1.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
